--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
                         </div>
                     </div>
                 </div>
+                 <div class=".col-lg-3 col-md-4 col-sm-6 col-12 mb-3">
+                    <div class="animal">
+                        <img src="https://TingYing1015.github.io/color-shape/purple-circle" class="animal-img-top">
+                        <div class="animal header">
+                            <h5 class="animal-title text-center">purple-circle</h5>
+                        </div>
+                    </div>
+                </div>
                 <div class=".col-lg-3 col-md-4 col-sm-6 col-12 mb-3">
                     <div class="animal">
                         <img src="https://TingYing1015.github.io/color-shape/yellow-star.png" class="animal-img-top">
