--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                 </div>
                  <div class=".col-lg-3 col-md-4 col-sm-6 col-12 mb-3">
                     <div class="animal">
-                        <img src="https://TingYing1015.github.io/color-shape/purple-circle" class="animal-img-top">
+                        <img src="https://TingYing1015.github.io/color-shape/purple-circle.png" class="animal-img-top">
                         <div class="animal header">
-                            <h5 class="animal-title text-center">purple-circle</h5>
+                            <h5 class="animal-title text-center">purple-circle.png</h5>
                         </div>
                     </div>
                 </div>
